[package]
name = "rust-torrent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.13"
serde_bencode = "^0.2.3"
serde_bytes = "0.11"
serde = "^1.0.0"
serde_derive = "^1.0.0"
reqwest = { version = "0.11.3"}
tokio = { version = "1", features = ["full"] }
futures = "0.3.14"
sha-1 = "0.9.8"
