[package]
name = "sharku"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.13"
serde_bencode = "^0.2.3"
serde_bytes = "0.11"
serde = {version="1.0.130", features = ["derive"]}
serde_derive = "^1.0.0"
reqwest = { version = "0.11.3"}
tokio = { version = "1", features = ["full"] }
sha-1 = "0.9.8"
log = "0.4.14"
env_logger = "0.9.0"
byteorder = "1"
memmap = "0.7.0"
bit-vec = "0.6.3"
derivative = "2.2.0"
